syntax = "proto3";


package articleservice;

option go_package = "/service";

service article {
    // grpc rest entry point to get article by its unique ID
    rpc GetArticleByID(GetArticleRequest) returns (ArticleResponce) {}

    rpc SetArticles(stream Article) returns (ArticlesFeature) {}

    // rpc RecordRoute(stream GetArticleRequest) returns (ArticlesFeature) {}

    // rpc RecordRoute(stream GetArticleRequest) returns (stream ArticlesFeature) {}
}

message GetArticleRequest {
    string id = 1; 
}

message ArticlesFeature {
   repeated string id = 1;
}

message ArticleResponce {
    Article article = 1;
}

message GetArticles {
    string type = 1; 
}

message Article {
    string id = 1; 
    string title = 2;
    string text = 3;
    string type = 4;
}


message ArticlesResponce {
    repeated Article articles = 1; 
}


// message ArticlesFeature {
//     repeated Article articles = 1; 
// }